kubernetes/odoo/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: odoo
  namespace: legacy-modernization
  labels:
    app: odoo
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: odoo
